# drive-pulse

./: .gitignore  LICENSE  README.md  README_NEW.md  generate-icon.py  generate-icons.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release-binary.yml
src/: App.tsx  styles.css
src-backend/: Cargo.toml  tauri.conf.json
src-backend/src/: commands.rs  lib.rs  main.rs  models.rs
src-cli/: Cargo.toml  README.md  backend.rs  main.rs
src-frontend/: App-old.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  models.rs
