[package]
name = "drive-pulse"
version = "0.1.0"
description = "Cross-platform drive scanner with snapshot comparison"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "drive_pulse_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-open", "fs-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
dirs = "5.0"
indicatif = "0.17"

[features]
custom-protocol = ["tauri/custom-protocol"]
