[package]
name = "drive-pulse-cli"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "drive-pulse-cli"
path = "main.rs"

[dependencies]
clap = "2.33"
dialoguer = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.2"
walkdir = "2"
sha2 = "0.10"
chrono = "0.4"
dirs = "5.0"
indicatif = "0.17"
console = "0.15"
comfy-table = "7.1"
prettytable-rs = "0.10"
drive-pulse = { path = "../src-backend" }
